--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "express": "~3.5.1",
-    "ws": "~0.4.31",
-    "mongoose": "~3.8.8"
+    "mongoose": "~3.8.8",
+    "request": "^2.40.0",
+    "ws": "~0.4.31"
   },
   "devDependencies": {},
   "scripts": {
