--- a/app/bower.json
+++ b/app/bower.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "angular": "~1.2.15",
-    "moment": "~2.5.1"
+    "moment": "~2.5.1",
+    "angular-route": "~1.2.23"
   }
 }
