--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express": "~3.5.1",
     "mongoose": "~3.8.8",
     "request": "^2.40.0",
-    "ws": "~0.4.31"
+    "ws": "~0.4.31",
+    "rss": "~1.1.1"
   },
   "devDependencies": {},
   "scripts": {
